# kronos

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  create_tables.py  docker-compose.yml  frontend.py  instructions.md  pyproject.toml
app/: config.py  database.py  main.py
app/api/: calendars.py  events.py  sync.py  users.py
app/api/v1/: auth.py  router.py
app/auth/: jwt.py  models.py  schemas.py
app/middleware/: rate_limit.py
app/models/: __init__.py  calendar.py  client.py  conflict.py  event.py  simple.py  user.py
app/schemas/: calendar.py  event.py  user.py
app/tasks/: __init__.py  calendar_sync.py
app/templates/: index.html
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/eslint/: .cache_ksgm0
frontend/.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/server-production/: 1.pack  2.pack  index.pack  index.pack.old
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.html  _not-found.js  _not-found.js.nft.json  _not-found.rsc  _not-found_client-reference-manifest.js  dashboard.html  dashboard.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/app/auth/: login.html  (+1 more)
frontend/.next/server/chunks/: 214.js  501.js  710.js  776.js
frontend/.next/server/pages/: 500.html  _app.js.nft.json  _document.js.nft.json  _error.js.nft.json
frontend/.next/static/chunks/: main-48f36062ed175001.js  main-app-ccf9c7aa5c0ac1bb.js  webpack-a4ff152b860970bb.js
frontend/.next/static/css/: bc7e8a3db94512c4.css
frontend/.next/types/app/: page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/waitlist/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/dashboard/: page.tsx
migrations/: env.py
(+12 files in other folders)
