[project]
name = "kronos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.14.1",
    "celery>=5.5.3",
    "fastapi>=0.115.14",
    "google-api-python-client>=2.174.0",
    "msal>=1.32.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "redis>=6.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]
